GH-39330: [Java][CI] Fix or suppress spurious errorprone warnings (#39529)
### Rationale for this change

This PR fixes the warnings generated by the errorprone library. 

### What changes are included in this PR?

Updating the code to remove warnings. 

Covered modules
- [x] algorithm
- [x] compression
- [x] flight
- [x] tools
- [x] vector 

### Are these changes tested?

Tested by existing test cases.

### Are there any user-facing changes?

No
* Closes: #39330

Lead-authored-by: Vibhatha Lakmal Abeykoon <vibhatha@gmail.com>
Co-authored-by: vibhatha <vibhatha@gmail.com>
Signed-off-by: David Li <li.davidm96@gmail.com>