@@ -19,6 +19,7 @@ package org.apache.arrow.flight;
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.lang.reflect.InvocationTargetException;
 import java.net.URISyntaxException;
 import java.nio.ByteBuffer;
 import java.util.ArrayList;
@@ -627,6 +628,7 @@ public class FlightClient implements AutoCloseable {
   /**
    * Shut down this client.
    */
+  @Override
   public void close() throws InterruptedException {
     channel.shutdown().awaitTermination(5, TimeUnit.SECONDS);
     allocator.close();
@@ -746,19 +748,24 @@ public class FlightClient implements AutoCloseable {
             try {
               // Linux
               builder.channelType(
-                  (Class<? extends ServerChannel>) Class.forName("io.netty.channel.epoll.EpollDomainSocketChannel"));
-              final EventLoopGroup elg = (EventLoopGroup) Class.forName("io.netty.channel.epoll.EpollEventLoopGroup")
-                  .newInstance();
+                  Class.forName("io.netty.channel.epoll.EpollDomainSocketChannel")
+                      .asSubclass(ServerChannel.class));
+              final EventLoopGroup elg =
+                  Class.forName("io.netty.channel.epoll.EpollEventLoopGroup").asSubclass(EventLoopGroup.class)
+                  .getDeclaredConstructor().newInstance();
               builder.eventLoopGroup(elg);
             } catch (ClassNotFoundException e) {
               // BSD
               builder.channelType(
-                  (Class<? extends ServerChannel>) Class.forName("io.netty.channel.kqueue.KQueueDomainSocketChannel"));
-              final EventLoopGroup elg = (EventLoopGroup) Class.forName("io.netty.channel.kqueue.KQueueEventLoopGroup")
-                  .newInstance();
+                  Class.forName("io.netty.channel.kqueue.KQueueDomainSocketChannel")
+                      .asSubclass(ServerChannel.class));
+              final EventLoopGroup elg = Class.forName("io.netty.channel.kqueue.KQueueEventLoopGroup")
+                  .asSubclass(EventLoopGroup.class)
+                  .getDeclaredConstructor().newInstance();
               builder.eventLoopGroup(elg);
             }
-          } catch (ClassNotFoundException | InstantiationException | IllegalAccessException e) {
+          } catch (ClassNotFoundException | InstantiationException | IllegalAccessException |
+                   NoSuchMethodException | InvocationTargetException e) {
             throw new UnsupportedOperationException(
                 "Could not find suitable Netty native transport implementation for domain socket address.");
           }
